secondfile/objects/DHStatus_Private_Line_Specific_Data__c.object
<CustomObject>
    <fields>
        <fullName>DHStatus_Port_Assignment_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Port Assignment Data</label>
        <referenceTo>DHStatus_Port_Assignment_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Private Line Specific Datas</relationshipLabel>
        <relationshipName>DHStatus_Private_Line_Specific_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OC3_Channel__c</fullName>
        <label>OC3 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Assignment_ID__c</fullName>
        <label>Port Assignment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Assignment_Type__c</fullName>
        <label>Port Assignment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T1_Channel__c</fullName>
        <label>T1 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T3_Channel__c</fullName>
        <label>T3 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DHStatus-Private Line Specific Data</label>
    <nameField>
        <displayFormat>DHPLSD-{000000}</displayFormat>
        <label>DHStatus-Private Line Specific Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Private Line Specific Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>